# BitRAG

./: .bitrag_config.json  .gitignore  CONFIG_GUIDE.md  OLLAMA_MODEL.txt  OLLAMA_MODELS.txt  README.md  UNKNOWN_STORY_PLAN.txt  bitrag.py  config.json  deepseek-r1_1.5b_Hybrid_for_unknown.csv  deepseek-r1_1.5b_reslt_for_unknown.csv  demo.sh  download_model.py  download_models.sh  install.sh  log.txt  metrics.py  package-lock.json  pyproject.toml  qwen3_1.7b_reslt_for_unknown.csv  requirements.txt  run.sh  run_frontend.sh  run_web.sh  setup.sh  start.sh  web_app.py
.planning/: CONTEXT.md  OLLAMA_INTEGRATION_FIX.md  PHASES_COMPLETE.md  PROJECT.md  ROADMAP.md  STATE.md  SUMMARY.md
BitRAG-Web-GUI/: OLLAMA_FIX_SUMMARY.md  OLLAMA_INTEGRATION.md  README.md  Research_8_Sem_Project.md  run.py  run.sh  run_backend.py  run_frontend.py
Flask_Frontend/: README.md  app.py  package-lock.json  package.json
Flask_Version/: README.md  app.py  run.sh
for github/: LICENSE  README.md  bitrag.py  requirements.txt  run_web.sh  setup.sh  web_app.py  web_requirements.txt
for_metrics/: rag_answers.txt  rag_questions.txt
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
results/: SUMMARY.md  test_output.txt
scripts/: activate_session.py  create_session.py  download_models.py
testing/: README.md  run_all_models.py  run_all_tests.py  run_csv_tests.py  run_needle_combinations.py  test_comprehensive.py  test_comprehensive_params.csv  test_faithfulness.py  test_gui.py  test_indexing.py  test_indexing_params.csv  test_inference.py  test_inference_batch.py  test_inference_params.csv  (+5 more)
(+198 files in other folders)
